--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,15 @@
   <packaging>jar</packaging>
   <build>
     <sourceDirectory>src</sourceDirectory>
-    <plugins>
+		<resources>
+			<resource>
+				<directory>src</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</resource>
+		</resources>
+	<plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
@@ -38,6 +46,17 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-web-services</artifactId>
 		    <version>2.2.1.RELEASE</version>
+		</dependency>
+		<dependency>
+		  <groupId>org.postgresql</groupId>
+		  <artifactId>pgjdbc-aggregate</artifactId>
+		  <version>42.2.8</version>
+		  <type>pom</type>
+		</dependency>
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>3.3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.zaxxer</groupId>
