--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
 		    <artifactId>mybatis-spring-boot-starter</artifactId>
 		    <version>2.1.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
