--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#logging level
+logging.level.root=WARN
+logging.level.my.projects.library=TRACE
 
 # DB configuration
 database.driver=org.postgresql.Driver
